--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p tsconfig.json",
-    "start": "node public/js/server.js"
+    "start": "node public/js/server.js",
+    "lint": "npx eslint src/*",
+    "fix": "npx eslint --fix src/*"
   },
   "author": "James Gaier",
   "license": "ISC",
@@ -21,6 +23,10 @@
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/socket.io": "^2.1.11",
-    "@types/socket.io-client": "^1.4.34"
+    "@types/socket.io-client": "^1.4.34",
+    "eslint": "^7.10.0",
+    "typescript": "^4.0.2",
+    "@typescript-eslint/eslint-plugin": "4.2.0",
+    "@typescript-eslint/parser": "4.2.0"
   }
 }
