--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "common-js": "^0.3.8",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.9",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/socket.io": "^2.1.11",
     "@types/socket.io-client": "^1.4.34",
-    "eslint": "^7.10.0",
-    "typescript": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "4.2.0",
-    "@typescript-eslint/parser": "4.2.0"
+    "@typescript-eslint/parser": "4.2.0",
+    "eslint": "^7.10.0",
+    "typescript": "^4.0.2"
   }
 }
